# location-logger-fastapi

./: .editorconfig  .env.example  .gitignore  .markdownlint.json  .oxfmtrc.json  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  .gitignore  README.md  api_test.rest  pyproject.toml  ruff.toml
backend/location_logger/: __init__.py
backend/location_logger/api/v1/: __init__.py  client.py  location.py  misc.py
backend/location_logger/common/: client.py  common.py  env.py
backend/location_logger/db/: __init__.py  __main__.py  engine.py  model.py
database/: README.md
database/lldb/: .env.example  docker-compose.yml
public/: .env.example  .htaccess  index.cgi.example  manifest.json
src/: App.vue  main.ts
src/assets/: main.css
src/components/: MainComponent.vue  MapComponent.vue
src/shared/: model.d.ts
