[project]
name = "location-logger"
dynamic = ["version"]
description = "Python implementation of Location Logger backend"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "y-app", email = "yapp.yamakox@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "a2wsgi>=1.10.10",
    "fastapi>=0.135.3",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "typer>=0.24.1",
    "uvicorn>=0.44.0",
]

[project.scripts]
lldb-cli = "location_logger.db:app"

[build-system]
requires = ["poetry-core>=2,<3", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = true

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ruff>=0.15.12",
]
